# neurocursor-v2

./: .gitignore  README.md
desktop/: README.md  pyproject.toml
desktop/app/: README.md  index.html  package-lock.json  package.json
desktop/app/src/: App.css  App.tsx
desktop/app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/app/src-tauri/capabilities/: default.json
desktop/app/src-tauri/src/: lib.rs  main.rs
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/neurocursor_v2/: DESIGN.md
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/neurocursor_v2_control_center_cobalt/: code.html
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/neurocursor_v2_settings/: code.html
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/neurocursor_v2_settings_cobalt/: code.html
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/neuropulse/: DESIGN.md
desktop/app/stitch_extracted/stitch_neurocursor_v2_dashboard/shader/: code.html
desktop/engine/: README.md  build_engine.sh  engine-aarch64-apple-darwin.spec  pyproject.toml
desktop/engine/src/neurocursor/: __init__.py  app.py
desktop/engine/src/neurocursor/core/: __init__.py  camera.py  cursor.py  gestures.py  settings.py  smoothing.py  tracker.py
desktop/src/neurocursor/: __main__.py  app.py
desktop/src/neurocursor/core/: __init__.py
desktop/src/neurocursor/ui/: __init__.py
docs/: architecture.md  learning-roadmap.md
