[project]
name = "neurocursor-engine"
version = "0.1.0"
description = "Local-first AI virtual mouse gesture engine for NeuroCursor."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Ansh Sharma" }
]
dependencies = []

[project.optional-dependencies]
engine = [
  "opencv-python",
  "mediapipe",
  "numpy",
  "pyautogui",
]
dev = [
  "pytest",
  "pyinstaller",
]

[project.scripts]
neurocursor-engine = "neurocursor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neurocursor = ["assets/*.task"]
